# templates

aactivator/conda/: .activate.sh
conda/: setup_conda.sh
git/: .gitconfig  exclude
python/module/: .gitignore  .pre-commit-config.yaml  pyproject.toml
python/package/: pyproject.toml  setup.cfg
