[build-system]
requires = ['setuptools>=65.1', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = '$NAME'
description = '$DESCRIPTION'
version = '0.0.1'
requires-python = '>=3.9'
dependencies = []

[tool.setuptools]
modules = []

[project.optional-dependencies]
dev = ['flake8', 'black', 'mypy', 'pip-tools']

[tool.isort]
profile = 'black'
force_single_line = 'true'

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR:$MYPY_CONFIG_FILE_DIR/stubs'
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
